--- a/docs/release-notes/v3_11_x.md
+++ b/docs/release-notes/v3_11_x.md
@@ -4,6 +4,98 @@ sidebar_position: -311
 
 # v3.11.x
 
+## v3.11.12
+
+date: 2025-10-09
+
+本次v3.11.12更新亮点为：
+
+1. 全面支持x86和arm两种架构的主流Linux服务器发行版的在线部署，详细列表如下。由于测试时间不足，如果遇到问题，请到issue反馈。
+    - openEuler: 22.03 LTS SP3, 22.03 LTS SP4, 24.03 LTS SP2
+    - CentOS: 7.9, 8 stream, 9 stream, 10 stream
+    - Debian: 11, 12, 13
+    - Ubuntu Server: 20.04 LTS, 22.04 LTS, 24.04 LTS, 25.04
+    - AnolisOS: 8.8. 8.10
+    - OpenCloudOS: 8.8, 8.10, 9.2, 9.4
+    - Rocky Linux: 8.x, 9.x, 10.x
+    - Alma Linux: 8.x, 9.x, 10.x
+
+2. 内置私有云改进：
+    - 虚拟机支持部署和扩容 LVM 磁盘，支持在线扩容LVM磁盘
+    - 虚拟机PANIC时自动捕获虚拟机截屏，便于后续问题排查
+    - 宿主机host服务支持cgroup v2 API
+
+3. 云管主要改进：
+    - 升级AWS SDK到2.0，支持AWS CUR 2.0账单
+    - 支持主机自动快照策略
+
+### 功能改进
+
+- 【主机】自动初始化虚拟机的sshd配置，默认允许root密码登录
+- 【主机】支持使用NetworkManager管理网络的操作系统，包括CentOS Stream 10, Rocky Linux 10.x, Alma Linux 10.x
+- 【主机】宿主机上host 服务支持cgroup v2 接口
+- 【主机】宿主机列表资源按使用率或分配率排序
+- 【主机】从主机备份创建的虚拟机支持修改磁盘类型
+- 【主机】通过ISO镜像创建虚机时不对镜像引导方式进行校验
+- 【主机】删除虚机器时执行虚机网卡删除脚本防止虚机网口堆积问题
+- 【云管】优化加载公有云镜像列表速度
+- 【云管】MongoDB展示域名地址
+- 【云管】VMware磁盘支持卸载
+- 【云管】支持腾讯云SQL Server
+- 【裸金属】优化 PXE 下发的 grub 配置文件，尽可能探测多的引导盘
+- 【镜像】系统镜像支持管理公有云的系统镜像
+- 【镜像】支持探测同时支持 UEFI及 BIOS 引导的镜像
+- 【监控】添加腾讯云磁盘利用率监控
+- 【前端】部分资源增加列表状态统计
+- 【部署】默认禁用 apimap 服务，防止出现数据库数据过多出现慢查询
+- 【计费】支持AWS CUR 2.0账单（企业版）
+- 【计费】多维度分析图表动态计算横轴标签是否倾斜展示，以便容纳更多可展示信息（企业版）
+- 【工单】优化工单查询和通知审批人的性能（企业版）
+- 【部署】支持 OpenEuler 22.03 LTS SP4的离线部署（企业版）
+
+### 问题修复
+
+- 【主机】修复老版本虚拟机描述文件字段缺失或错误导致主机热迁移失败的问题
+- 【主机】修复VPC 网络多网口默认路由未正确设置的问题
+- 【主机】修复在无numa node 机器host 服务启动失败的问题
+- 【云管】修复华为云只能同步1000台实例问题
+- 【云管】修复esxi删除实例时，仅取消注册，未彻底删除资源问题
+- 【云管】修复本地到期释放功能和资源同步冲突导致资源误删问题
+- 【云管】修复DNS解析域名校验规则
+- 【云管】修复按量付费机器到期释放参数问题
+- 【裸金属】修复 arm64 物理机做 megaraid 逻辑盘失败的问题
+- 【调度】修复网卡、套餐信息缓存没有及时刷新导致调度失败的问题
+- 【认证】自动清理因operator BUG生成的大量历史密码
+- 【通知】修复企业微信token失效导致发送消息失败问题
+- 【监控】修复监控按域、项目聚合参数问题
+- 【监控】修复监控总览显示告警资源数量有时为空的问题
+- 【镜像】修复上传系统镜像上传进度展示错误，更换为从请求中获取
+- 【镜像】修复部分镜像 UEFI 引导探测成 BIOS 引导的问题
+- 【前端】修复导航栏监控告警图标未做权限校验问题
+- 【前端】修复页面favicon.ico展示不一致问题
+- 【前端】修复部分文档链接跳转错误地址问题
+- 【前端】默认关闭webconsole的referer检查，避免升级后无法webconsole无法使用
+- 【部署】修复 OpenEuler LVM 系统盘 initrd 引导失败的问题
+- 【部署】避免开启-sync-user后重复修改用户密码，导致积累大量历史密码修改记录
+- 【计费】修复谷歌云重跑账单api错误问题（企业版）
+- 【计费】修复部分计费页面右上角切换账单无法点击问题（企业版）
+- 【计费】修复阿里云国际账单计费类型异常（企业版）
+- 【工单】修复因购物车状态变化导致工单卡住问题（企业版）
+- 【授权】修复授权完成后弹框未关闭问题（企业版）
+
+### 新功能
+
+- 【主机】支持主机自动快照策略
+- 【主机】虚拟机操作系统内核 PANIC 时自动保存截屏
+- 【主机】支持部署和扩容 LVM 磁盘，支持在线扩容LVM磁盘
+- 【主机】SSH密钥对支持ED25519/ECDSA格式的公钥
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.11.12](../development/changelog/release-3_11/3-11-12)
+
 ## v3.11.11
 
 date: 2025-07-20
