--- a/docs/getting-started/_parts/_quickstart-ocboot-k3s-env.mdx
+++ b/docs/getting-started/_parts/_quickstart-ocboot-k3s-env.mdx
@@ -13,12 +13,26 @@
 
 | Operationg system and Arch             | 3.11 | 3.10 |
 | -------------------------------------- | ---- | ---- |
+| OpenEuler 22.03 LTS SP3 x86_64+aarch64 | ✅    | ✅    |
+| OpenEuler 22.03 LTS SP4 x86_64+aarch64 | ✅    |       |
+| OpenEuler 24.03 LTS SP2 x86_64+aarch64 | ✅    |       |
 | CentOS 7 2009 x86_64+aarch64           | ✅    | ✅    |
-| OpenEuler 22.03 LTS Sp3 x86_64+aarch64 | ✅    | ✅    |
+| CentOS 8 Stream x86_64+aarch64         | ✅    |       |
+| CentOS 9 Stream x86_64+aarch64         | ✅    |       |
+| CentOS 10 Stream x86_64+aarch64        | ✅    |       |
 | Debian 11 x86_64+aarch64               | ✅    | ✅    |
-| Ubuntu 22.04 x86_64+aarch64            | ✅    | ✅    |
-| CentOS Stream8 x86_64                  | ✅    | ✅    |
-| Rocky Linux 8.9 x86_64                 | ✅    | ✅    |
-| OpencloudOS 8.8 x86_64                 | ✅    | ✅    |
-| AlmaLinux 8.9 x86_64                   | ✅    | ✅    |
-| AnolisOS 8.8 x86_64                    | ✅    | ✅    |
+| Debian 12 x86_64+aarch64               | ✅    |       |
+| Debian 13 x86_64+aarch64               | ✅    |       |
+| Ubuntu 20.04 LTS x86_64+aarch64        | ✅    |       |
+| Ubuntu 22.04 LTS x86_64+aarch64        | ✅    |       |
+| Ubuntu 24.04 LTS x86_64+aarch64        | ✅    |       |
+| Ubuntu 25.04 x86_64+aarch64            | ✅    |       |
+| Rocky Linux 8.x  x86_64+aarch64        | ✅    |       |
+| Rocky Linux 9.x  x86_64+aarch64        | ✅    |       |
+| Rocky Linux 10.x x86_64+aarch64        | ✅    |       |
+| AlmaLinux 8.x  x86_64+aarch64          | ✅    |       |
+| AlmaLinux 9.x  x86_64+aarch64          | ✅    |       |
+| AlmaLinux 10.x x86_64+aarch64          | ✅    |       |
+| OpencloudOS 8.x x86_64+aarch64         | ✅    |       |
+| OpencloudOS 9.x x86_64+aarch64         | ✅    |       |
+| AnolisOS 8.x x86_64+aarch64            | ✅    |       |
