--- a/docs/baremetal/getting-started/index.mdx
+++ b/docs/baremetal/getting-started/index.mdx
@@ -1,12 +1,12 @@
 ---
-sidebar_position: 3
-description: 安装部署物理机管理产品。
+sidebar_position: 2
+description: 安装部署 Cloudpods 物理机管理平台
 hide_table_of_contents: true
 ---
 
-# 物理机管理
+# 安装部署
 
-安装部署物理机管理产品。
+安装部署 Cloudpods 物理机管理平台
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
