--- a/docs/baremetal/guides/index.mdx
+++ b/docs/baremetal/guides/index.mdx
@@ -1,8 +1,12 @@
 ---
-sidebar_position: 1
+sidebar_position: 2
+hide_table_of_contents: true
 ---
 
-# 物理机管理 - 使用指南
+# 用户手册
 
-这里是物理机管理的使用指南。
+介绍物理机管理平台的功能。
 
+import IndexDocCardList from '@site/src/components/IndexDocCardList';
+
+<IndexDocCardList />
