fix: fix english translations

--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -296,7 +296,7 @@
     "message": "Multi-Cloud Management"
   },
   "homepage.getStartedBaremetal": {
-    "message": "Bare Metal Management"
+    "message": "Baremetal Management"
   },
   "productCards.onpremise.name": {
     "message": "Private Cloud"
@@ -311,7 +311,7 @@
     "message": "Unified management of multiple public and private cloud platforms, simplifying multi-cloud complexity"
   },
   "productCards.baremetal.name": {
-    "message": "Bare Metal Management"
+    "message": "Baremetal Management"
   },
   "productCards.baremetal.description": {
     "message": "Full lifecycle management of physical machines with OS installation and RAID configuration"
@@ -324,6 +324,69 @@
   },
   "productCards.quickStart": {
     "message": "Quick Start"
+  },
+  "productCards.onpremise.step1.title": {
+    "message": "Install Cloudpods"
+  },
+  "productCards.onpremise.step1.description": {
+    "message": "One-click deployment of private cloud environment"
+  },
+  "productCards.onpremise.step2.title": {
+    "message": "Create Virtual Machine"
+  },
+  "productCards.onpremise.step2.description": {
+    "message": "Create VM using Web UI or CLI"
+  },
+  "productCards.onpremise.step3.title": {
+    "message": "Manage Resources"
+  },
+  "productCards.onpremise.step3.description": {
+    "message": "Monitor, scale and optimize your private cloud"
+  },
+  "productCards.onpremise.button": {
+    "message": "Start using Private Cloud >"
+  },
+  "productCards.cmp.step1.title": {
+    "message": "Access Cloud Account"
+  },
+  "productCards.cmp.step1.description": {
+    "message": "Add Alibaba Cloud, AWS, Tencent Cloud, etc."
+  },
+  "productCards.cmp.step2.title": {
+    "message": "Unified View"
+  },
+  "productCards.cmp.step2.description": {
+    "message": "View all cloud resources in a unified interface"
+  },
+  "productCards.cmp.step3.title": {
+    "message": "Batch Operations"
+  },
+  "productCards.cmp.step3.description": {
+    "message": "Cross-cloud platform batch management of resources"
+  },
+  "productCards.cmp.button": {
+    "message": "Start using Multi-Cloud Management >"
+  },
+  "productCards.baremetal.step1.title": {
+    "message": "Discover Servers"
+  },
+  "productCards.baremetal.step1.description": {
+    "message": "Automatically discover physical machines and add them to management"
+  },
+  "productCards.baremetal.step2.title": {
+    "message": "Deploy Operating System"
+  },
+  "productCards.baremetal.step2.description": {
+    "message": "Automated deployment via PXE"
+  },
+  "productCards.baremetal.step3.title": {
+    "message": "Monitoring and Maintenance"
+  },
+  "productCards.baremetal.step3.description": {
+    "message": "Hardware monitoring and remote management"
+  },
+  "productCards.baremetal.button": {
+    "message": "Start using Baremetal >"
   },
   "productSelector.viewDocs": {
     "message": "View Documentation"
@@ -345,6 +408,9 @@
   },
   "homepage.subtitle": {
     "message": "A cloud-native open-source unified cloud platform"
+  },
+  "homepage.tagline": {
+    "message": "Build your own cloud on clouds"
   },
   "homepage.buildown": {
     "message": "Build your own cloud on clouds"
@@ -377,7 +443,7 @@
     "message": "A lightweight private cloud capable of managing massive KVM virtual machines"
   },
   "homepage.featureBaremetal": {
-    "message": "Bare metal"
+    "message": "Baremetal"
   },
   "homepage.featureBaremetalDesc": {
     "message": "A bare metal cloud capable of managing the entire lifecycle of physical machines"
