--- a/docs/baremetal/getting-started/docker-compose.mdx
+++ b/docs/baremetal/getting-started/docker-compose.mdx
@@ -182,7 +182,7 @@ LISTEN_INTERFACE=eth0 PUBLIC_IP=10.168.222.205 docker compose up
 
 ![](./imgs/ssh-login.png)
 
-更多物理机相关原理和使用介绍，请参考文档：[用户手册/私有云/物理机](../../guides/onpremise/baremetal)。
+更多物理机相关原理和使用介绍，请参考文档：[用户手册/物理机](../guides/baremetal)。
 
 ## 操作说明
 
