--- a/docs/getting-started/_parts/_ha-env.mdx
+++ b/docs/getting-started/_parts/_ha-env.mdx
@@ -18,7 +18,7 @@ import OcbootEnv from '../_parts/_quickstart-ocboot-k3s-env.mdx';
 - Debian 10-11(X86_64和ARM64) 默认安装MariaDB 10.3.1
 - Kylin V10 sp2(X86_64和ARM64) 默认安装MariaDB 10.3.4
 
-另外高可用的数据库部署也可以参考文档：[部署 Mariadb HA 环境](../../operations/databases/db-ha) 。
+另外高可用的数据库部署也可以参考文档：[部署 Mariadb HA 环境](../operations/databases/db-ha) 。
 
 ## 高可用集群 ntp 一致性
 
