--- a/docs/onpremise/getting-started/baremetal.mdx
+++ b/docs/onpremise/getting-started/baremetal.mdx
@@ -97,7 +97,7 @@ $ kubectl delete pods -n onecloud default-host-xdc7x
 
 ## 注册管理物理机
 
-部署完成后可以参考 ["用户手册/私有云/物理机"](../../guides/onpremise/baremetal/) 来进行对物理机的注册管理。
+部署完成后可以参考 ["用户手册/物理机"](../guides/baremetal/) 来进行对物理机的注册管理。
 
 ## 禁用 baremetal-agent
 
