--- a/docs/shared/_parts/operations/ocboot-upgrading.mdx
+++ b/docs/shared/_parts/operations/ocboot-upgrading.mdx
@@ -50,7 +50,7 @@ import OcbootReleaseDownload from '@site/docs/getting-started/_parts/_quickstart
 
 如果没有设置免密码登录，请使用 `ssh-copy-id -i ~/.ssh/id_rsa.pub root@PRIMARY_MASTER_HOST` 命令把公钥下发到自己环境对应的节点。
 
-可升级的版本号可以到 [发布日志 3.11 页面](/docs/shared/release-notes/v3_11_x) 查询。
+可升级的版本号可以到 [发布日志 3.11 页面](../../release-notes/v3_11_x) 查询。
 
 ### 执行升级命令
 
@@ -83,7 +83,7 @@ $ kubectl get pods -n onecloud --watch
 - 一般小版本降级没有问题，比如从 v3.10.7 降级到 v3.10.6
 - 跨版本降级可能会有问题，比如从 v3.10.7 降级到 v3.9.15
 
-如果遇到问题请到 [GitHub 提 issue](https://github.com/yunionio/cloudpods/issues) 或者 [联系我们](/docs/shared/contact/) 获取帮助。
+如果遇到问题请到 [GitHub 提 issue](https://github.com/yunionio/cloudpods/issues) 或者 [联系我们](../../contact/) 获取帮助。
 :::
 
 ## 回滚操作
