--- a/docs/shared/release-notes/v3_10_x.md
+++ b/docs/shared/release-notes/v3_10_x.md
@@ -181,7 +181,7 @@ date: 2023-12-08
 - 【监控】支持使用 VictoriaMetrics 作为监控后端
 
 :::tip
-- 为了避免升级导致的服务中断，v3.10.8只会默认部署VictoriaMetrics，但不默认启用。需要参考： [从 Influxdb 手动迁移切换到VictoriaMetrics](../operations/monitoring/migrating-to-vm)。从3.11开始将默认启用VictoriaMetrics。
+- 为了避免升级导致的服务中断，v3.10.8只会默认部署VictoriaMetrics，但不默认启用。需要参考： [从 Influxdb 手动迁移切换到VictoriaMetrics](../../onpremise/operations/monitoring/migrating-to-vm)。从3.11开始将默认启用VictoriaMetrics。
 - 虚拟机部署方式默认采用轻量虚拟机方式，但原有采用nbd方式的虚拟机部署方式也依然保留，可以通过修改配置切换回去。
 :::
 
