fix: remove containerd words from 3.11

--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -302,7 +302,7 @@
     "message": "Private Cloud"
   },
   "productCards.onpremise.description": {
-    "message": "Manage massive KVM virtual machines and containerd container resources"
+    "message": "Manage massive KVM virtual machines resources"
   },
   "productCards.cmp.name": {
     "message": "Multi-Cloud Management"
