feat: add the v3.11.13 release note

--- a/docs/shared/release-notes/v3_11_x.md
+++ b/docs/shared/release-notes/v3_11_x.md
@@ -4,6 +4,82 @@ sidebar_position: -311
 
 # v3.11.x
 
+## v3.11.13
+
+date: 2026-02-12
+
+本次 v3.11.13 包含以下亮点功能：
+
+- 裸金属创建时，可以基于SATA或NVMe等非RAID磁盘自动创建软RAID
+- 支持采集宿主机的dmesg日志
+- 工单支持用户、组和项目权限操作相关的审批流程（企业版）
+- 支持火山引擎分账账单（企业版）
+
+更多更新详情如下：
+
+### 新功能
+
+- 【宿主机】自动采集宿主机的关键dmesg日志，并在前端展示，方便排查宿主机硬件问题
+- 【裸金属】新建裸金属时，支持自动基于非RAID磁盘（SATA或NVMe）自动配置软RAID
+- 【镜像】对同时可以BIOS和UEFI引导的系统镜像进行了支持，用户可以选择两种模式之一启动虚拟机
+- 【前端】控制面板支持根据服务器CPU架构维度展示相关资源指标（增加CPU架构的指标）
+- 【工单】工单支持用户、组和项目权限操作相关的审批流程（企业版）
+- 【计费】支持火山云分账账单（企业版）
+
+### 功能改进
+
+- 【调度器】支持配置服务启用 go profiling API，方便性能调优
+- 【虚拟机】支持同步公有云磁盘设备名称
+- 【虚拟机】支持通过调度标签创建虚拟机指定资源池
+- 【虚拟机】虚机部署增加系统密码强度校验，根据虚拟机操作系统密码强度要求自动设置对应强度密码
+- 【安全组】支持修改阿里云安全组规则
+- 【安全组】安全组规则增加备注校验
+- 【套餐】套餐删除移除平台限制
+- 【前端】缩小全局svg图片大小，增快页面加载速度，性能优化，
+- 【监控】支持将告警阈值设置为在一个区间范围之内或之外
+- 【标签】标签选择支持远端过滤
+- 【工单】支持更新未结束工单内容（企业版）
+- 【计费】多币种支持，支持费率设置美元泰铢等币种，支持展示多种币种的账单（企业版）
+- 【计费】支持了分摊策略克隆功能（企业版）
+- 【监控大屏】cpu/memory使用率更改获取字段，精准数据（企业版）
+
+### 问题修复
+
+- 【物理机】修复偶发出现无法删除裸金属记录的问题
+- 【物理机】修复在重装系统时可能出现找错系统盘的问题
+- 【物理机】修复 PXE 返回 grub 固件查找 msdos 引导分区失败的问题
+- 【物理机】修复裸金属ssh状态校验
+- 【物理机】修复裸金属监控报错未展示问题
+- 【物理机】创建裸金属网络排除container和hostlocal类型
+- 【宿主机】更新非KVM宿主机的监控指标，去除无用指标
+- 【宿主机】修复偶发时序问题qemu detect machine info 失败导致host启动失败
+- 【虚拟机】修复电源状态可能没有更新正确的问题
+- 【虚拟机】修复打开阿里云VNC失败问题
+- 【虚拟机】修复创建vmware虚拟机系统盘指定厚置备不生效问题
+- 【安全组】修复华为云安全组规则端口同步异常问题
+- 【镜像】修复偶发高可用部署的镜像服务未成功初始化对象存储，导致上传镜像失败
+- 【DNS】修复regiondns未支持达梦数据库问题
+- 【监控】修复告警级别不正确的问题
+- 【监控】修复告警历史根据告警策略和资源名称过滤不生效的问题
+- 【监控】修复物理机 RAID卡监控上报数据不兼容 VictoriaMetrics 的问题
+- 【监控】修复腾讯云监控缺失问题
+- 【监控】修复设置监控时，监控值和单位匹配错误问题
+- 【监控】修复告警趋势参数错误报错问题
+- 【前端】修复前端资源列表统计过滤与列表状态过滤项不统一问题
+- 【计费】多维度分析只有一个维度时,隐藏按维度1展示选项（企业版）
+- 【计费】修复并发账单任务二次定价不生效问题（企业版）
+- 【计费】修复修改项目分摊规则异常及按消费占比分摊总和不为100%问题（企业版）
+- 【计费】修复多维度分析图横轴文字自动倾斜展示（企业版）
+- 【工单】修复工单流程配置完成后未生效问题（企业版）
+- 【全局配置】修复全局配置报错时导致部分内容未展示问题（企业版）
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.11.13](../development/changelog/release-3_11/3-11-13)
+
+
 ## v3.11.12
 
 date: 2025-10-20
@@ -649,7 +725,7 @@ date: 2024-3-20
 
 主机功能在 v3.11 做了较多改进，重点是两个方向：一、私有云主机更充分地发挥硬件的性能；二、提升云主机易用性。
 
-为了充分发挥硬件性能，Cloudpods 已经支持了不少特性，包括 PCI 设备透传（包括网卡，GPU，NVME 等设备的透传），网卡 SR-IOV 和 ovs offload，开启宿主机内存大页，绑定虚拟 CPU 核到物理核等，在 v3.11，Cloudpods 实现了期待已久的虚拟机 NUMA-aware 内存分配策略。开启后，会尽量把一台虚拟机的内存分配在同一个 NUMA 节点的内存空间内，虚拟机的 vCPU 也会尽量分配到同一个 NUMA 节点，由此避免出现跨 NUMA 分配虚拟机CPU和内存导致的性能下降问题。
+为了充分发挥硬件性能，Cloudpods 已经支持了不少特性，包括 PCI 设备透传（包括网卡，GPU，NVMe 等设备的透传），网卡 SR-IOV 和 ovs offload，开启宿主机内存大页，绑定虚拟 CPU 核到物理核等，在 v3.11，Cloudpods 实现了期待已久的虚拟机 NUMA-aware 内存分配策略。开启后，会尽量把一台虚拟机的内存分配在同一个 NUMA 节点的内存空间内，虚拟机的 vCPU 也会尽量分配到同一个 NUMA 节点，由此避免出现跨 NUMA 分配虚拟机CPU和内存导致的性能下降问题。
 
 另外一个重要特性是支持用 LVM 来管理共享块存储（SAN 存储）。共享块存储使用LVM管理，虚拟机直接通过挂载从共享块存储分配的逻辑卷（LV），省去了用文件作为虚拟磁盘引入的文件系统开销。Cloudpods 支持了 clvm 和 slvm 两种共享 LVM 的管理方式。简单地说，clvm 模式利用了集群模式的 clvm 服务来管理共享网络存储上的 LVM 卷，clvm 自动提供了 lvm 管理服务的分布式高可用。但缺点是 clvm 配置复杂。slvm 则不需要配置复杂的集群 clvm 服务，每个宿主机节点上只需要安装单机的 lvm 服务，平台选择一个节点作为共享存储的 lvm 配置节点，平台在该节点分配 LV 之后会自动在需要挂载的节点刷新 lvm 的元数据，获得分配的 LV。这种方式避免了部署分布式 clvm 的复杂性。但在配置节点不可用后，需要手动地切换配置节点。但这个问题可以在后期迭代中逐步解决。
 
