--- a/i18n/en/docusaurus-plugin-content-docs/current/release-notes/v3_11_x.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/release-notes/v3_11_x.md
@@ -4,6 +4,81 @@ sidebar_position: -311
 
 # v3.11.x
 
+## v3.11.13
+
+date: 2026-02-12
+
+The highlights of this v3.11.13 update are:
+
+- Bare metal creation supports automatic software RAID based on non-RAID disks such as SATA or NVMe
+- Support for collecting host dmesg logs
+- Work orders support approval workflows for user, group, and project permission operations (Enterprise Edition)
+- Support for Volcano Engine split billing (Enterprise Edition)
+
+More update details are as follows:
+
+### New Features
+
+- 【Host】Automatically collect key dmesg logs from hosts and display them in the frontend for troubleshooting host hardware issues
+- 【Bare Metal】When creating bare metal, support automatic software RAID configuration based on non-RAID disks (SATA or NVMe)
+- 【Image】Support for system images that can boot with both BIOS and UEFI; users can choose either mode to start the VM
+- 【Frontend】Dashboard supports displaying resource metrics by server CPU architecture (added CPU architecture metrics)
+- 【Work Order】Work orders support approval workflows for user, group, and project permission operations (Enterprise Edition)
+- 【Billing】Support for Volcano Engine split billing (Enterprise Edition)
+
+### Feature Improvements
+
+- 【Scheduler】Support configuring services to enable Go profiling API for performance tuning
+- 【VM】Support synchronizing public cloud disk device names
+- 【VM】Support specifying resource pool when creating VMs via scheduling tags
+- 【VM】VM deployment adds system password strength validation; automatically set password strength according to VM OS requirements
+- 【Security Group】Support modifying Alibaba Cloud security group rules
+- 【Security Group】Security group rules add remark validation
+- 【Package】Remove platform restriction when deleting packages
+- 【Frontend】Reduce global SVG image size for faster page loading and performance optimization
+- 【Monitoring】Support setting alert thresholds to within or outside a range
+- 【Tag】Tag selection supports remote filtering
+- 【Work Order】Support updating content of unfinished work orders (Enterprise Edition)
+- 【Billing】Multi-currency support: support rate settings for USD, THB and other currencies, support displaying bills in multiple currencies (Enterprise Edition)
+- 【Billing】Support allocation policy cloning (Enterprise Edition)
+- 【Monitoring Dashboard】Changed CPU/memory usage field retrieval for accurate data (Enterprise Edition)
+
+### Bug Fixes
+
+- 【Bare Metal】Fixed occasional issue where bare metal records could not be deleted
+- 【Bare Metal】Fixed possible wrong system disk selection during OS reinstall
+- 【Bare Metal】Fixed PXE returning grub firmware failing to find msdos boot partition
+- 【Bare Metal】Fixed bare metal SSH status validation
+- 【Bare Metal】Fixed bare metal monitoring errors not being displayed
+- 【Bare Metal】Exclude container and hostlocal network types when creating bare metal networks
+- 【Host】Updated monitoring metrics for non-KVM hosts, removed unused metrics
+- 【Host】Fixed occasional timing issue where qemu detect machine info failure caused host startup failure
+- 【VM】Fixed issue where power state might not be updated correctly
+- 【VM】Fixed Alibaba Cloud VNC connection failure
+- 【VM】Fixed issue where thick provisioning for VMware VM system disk did not take effect
+- 【Security Group】Fixed Huawei Cloud security group rule port sync anomaly
+- 【Image】Fixed occasional issue where HA-deployed image service failed to initialize object storage, causing image upload failure
+- 【DNS】Fixed regiondns not supporting Dameng database
+- 【Monitoring】Fixed incorrect alert level
+- 【Monitoring】Fixed alert history filtering by alert policy and resource name not taking effect
+- 【Monitoring】Fixed bare metal RAID card monitoring data incompatibility with VictoriaMetrics
+- 【Monitoring】Fixed Tencent Cloud monitoring data missing
+- 【Monitoring】Fixed monitoring value and unit mismatch when setting up monitoring
+- 【Monitoring】Fixed alert trend parameter error
+- 【Frontend】Fixed inconsistency between resource list statistics filter and list status filter
+- 【Billing】When multi-dimensional analysis has only one dimension, hide "display by dimension 1" option (Enterprise Edition)
+- 【Billing】Fixed concurrent billing task secondary pricing not taking effect (Enterprise Edition)
+- 【Billing】Fixed project allocation rule modification exception and consumption-based allocation sum not 100% (Enterprise Edition)
+- 【Billing】Fixed multi-dimensional analysis chart horizontal axis text auto-tilt display (Enterprise Edition)
+- 【Work Order】Fixed work order workflow not taking effect after configuration (Enterprise Edition)
+- 【Global Config】Fixed partial content not displayed when global config reported errors (Enterprise Edition)
+
+### CHANGELOG
+
+For specific changes, please refer to:
+
+- [CHANGELOG v3.11.13](../development/changelog/release-3_11/3-11-13)
+
 ## v3.11.12
 
 date: 2025-10-20
@@ -647,7 +722,7 @@ Thanks to four students from Open Source Summer 2023 for contributing the follow
 
 Host functionality in v3.11 has many improvements, focusing on two directions: First, private cloud hosts more fully utilize hardware performance; Second, improve cloud host usability.
 
-To fully utilize hardware performance, Cloudpods already supports many features, including PCI device passthrough (including NICs, GPUs, NVME devices, etc.), NIC SR-IOV and ovs offload, enabling host huge pages, binding virtual CPU cores to physical cores, etc. In v3.11, Cloudpods implemented the long-awaited VM NUMA-aware memory allocation strategy. After enabling, it tries to allocate a VM's memory within the same NUMA node's memory space, and the VM's vCPUs are also allocated to the same NUMA node as much as possible, avoiding performance degradation caused by cross-NUMA allocation of VM CPUs and memory.
+To fully utilize hardware performance, Cloudpods already supports many features, including PCI device passthrough (including NICs, GPUs, NVMe devices, etc.), NIC SR-IOV and ovs offload, enabling host huge pages, binding virtual CPU cores to physical cores, etc. In v3.11, Cloudpods implemented the long-awaited VM NUMA-aware memory allocation strategy. After enabling, it tries to allocate a VM's memory within the same NUMA node's memory space, and the VM's vCPUs are also allocated to the same NUMA node as much as possible, avoiding performance degradation caused by cross-NUMA allocation of VM CPUs and memory.
 
 Another important feature is support for using LVM to manage shared block storage (SAN storage). Shared block storage uses LVM management, VMs directly mount logical volumes (LV) allocated from shared block storage, eliminating file system overhead introduced by using files as virtual disks. Cloudpods supports clvm and slvm two shared LVM management methods. Simply put, clvm mode uses cluster-mode clvm service to manage LVM volumes on shared network storage, clvm automatically provides distributed high availability for lvm management service. But the disadvantage is clvm configuration is complex. slvm does not require configuring complex cluster clvm service, each host node only needs to install single-machine lvm service, platform selects one node as shared storage's lvm configuration node, platform automatically refreshes lvm metadata on nodes that need to mount after allocating LV on that node, obtaining allocated LV. This method avoids the complexity of deploying distributed clvm. But after the configuration node becomes unavailable, manual switching of configuration node is needed. But this issue can be gradually solved in later iterations.
 
